# medisage-ai-android-kotlin

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  index_reader.cpp  index_reader.h  native-lib.cpp
app/src/main/java/com/unreal/medisageai/: NativeSearchEngine.kt
app/src/main/java/com/unreal/medisageai/data/: MediSageRepositoryImpl.kt
app/src/main/java/com/unreal/medisageai/data/local/: ChatDao.kt  ChatMessageEntity.kt  ChatSessionEntity.kt  Converters.kt  MediSageDatabase.kt  PopulatedChatSession.kt
app/src/main/java/com/unreal/medisageai/di/: DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/unreal/medisageai/rag/: BertTokenizer.kt  EmbeddingEngine.kt  RagEngine.kt
app/src/main/java/com/unreal/medisageai/ui/auth/: AuthComponents.kt  CreateAccountScreen.kt  LoginScreen.kt
app/src/main/java/com/unreal/medisageai/ui/chat/: ChatHistory.kt  ChatScreen.kt
app/src/main/java/com/unreal/medisageai/ui/navigation/: MediSageNavHost.kt  NavDestinations.kt
app/src/main/python/: convert_data.py  download-data.py  download_model.py  test_embed.py
gradle/: libs.versions.toml
